objects/ssot__ClaimItem__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AddedByType__c</fullName>
        <label>Added By Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimId__c</fullName>
        <label>Claim</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimItem_ClaimId_map_Claim_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimItem_ClaimId_map_Claim_Id_N_1</label>
        <referenceTo>ssot__Claim__dlm</referenceTo>
        <relationshipLabel>ClaimItem_ClaimId_map_Claim_Id_N_1</relationshipLabel>
        <relationshipName>ClaimItem_ClaimId_map_Claim_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimItem_ItemCodeId_map_CodeSet_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimItem_ItemCodeId_map_CodeSet_Id_N_1</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>ClaimItem_ItemCodeId_map_CodeSet_Id_N_1</relationshipLabel>
        <relationshipName>ClaimItem_ItemCodeId_map_CodeSet_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimItem_LocationId_map_Location_Id_N_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimItem_LocationId_map_Location_Id_N_1</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>ClaimItem_LocationId_map_Location_Id_N_1</relationshipLabel>
        <relationshipName>ClaimItem_LocationId_map_Location_Id_N_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__ClaimParticipantId__c</fullName>
        <label>Claim Participant</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CoInsuranceAmt__c</fullName>
        <label>Co-Insurance Amt</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ssot__CoPayAmount__c</fullName>
        <label>Co Pay Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CoverageCategoryCodeId__c</fullName>
        <label>Coverage Category Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CoverageCategoryCodeObject__c</fullName>
        <label>Coverage Category Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeductibleAmount__c</fullName>
        <label>Deductible Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DeductibleUnallocatedAmount__c</fullName>
        <label>Deductible Unallocated Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EligibleAmount__c</fullName>
        <label>Eligible Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EligiblePercent__c</fullName>
        <label>Eligible Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Claim Item Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyAssetId__c</fullName>
        <label>Insurance Policy Asset</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InsurancePolicyCoverageId__c</fullName>
        <label>Insurance Policy Coverage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ItemCategory__c</fullName>
        <label>Item Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ItemCodeId__c</fullName>
        <label>Item Code</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ItemCodeObject__c</fullName>
        <label>Item Code Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PayableAmount__c</fullName>
        <label>Payable Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__PriceAdjustmentValueNumber__c</fullName>
        <label>Price Adjustment Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__QuantityUnitOfMeasureId__c</fullName>
        <label>Quantity UOM</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ServicedEndDateTime__c</fullName>
        <label>Service End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ServicedStartDateTime__c</fullName>
        <label>Service Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ServicingFacilityId__c</fullName>
        <label>Servicing Facility</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TaxAmount__c</fullName>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__UnitPriceAmount__c</fullName>
        <label>Unit Price Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128318040_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimItem_ClaimParticipantId_map_Cla_rel</label>
        <referenceTo>ssot__ClaimParticipant__dlm</referenceTo>
        <relationshipLabel>ClaimItem_ClaimParticipantId_map_Cla_rel</relationshipLabel>
        <relationshipName>rel_1723128318040_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128324122_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimItem_CoverageCategoryCodeId_map_rel</label>
        <referenceTo>ssot__CodeSet__dlm</referenceTo>
        <relationshipLabel>ClaimItem_CoverageCategoryCodeId_map_rel</relationshipLabel>
        <relationshipName>rel_1723128324122_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1723128375470_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClaimItem_ItemCodeId_map_CodeSetBund_rel</label>
        <referenceTo>ssot__CodeSetBundle__dlm</referenceTo>
        <relationshipLabel>ClaimItem_ItemCodeId_map_CodeSetBund_rel</relationshipLabel>
        <relationshipName>rel_1723128375470_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>